--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Light1</title>
- 
+ <div>
+     <img src="" height="42" width="42">
+     
+     <div>
   
 </head>
 
