finally link css

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Light1</title>
- <div>
-     <img src="https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png">
-     <!--<img src="http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ">-->
-     <div>
+    <link rel="stylesheet" href="style.css" type="text/css">
 
 </head>
 
 <body>
-  
+   <div>
+     <img src="https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png">
+     <!--<img src="http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ">-->
+     <div>
 </body>
 
 </html>
 
-<p>hi</p>
