--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+    <style>
+        <img src="https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png">
+     <!--<img src="http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ">-->
+
+    </style>
     <meta charset="UTF-8">
     <title>Light1</title>
     <link rel="stylesheet" href="style.css" type="text/css">
@@ -12,7 +17,8 @@
    <div>
      <img src="https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png">
      <!--<img src="http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ">-->
-     <div>
+
+     </div>
 </body>
 
 </html>
