--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 </head>
 
 <body>
-   <div>
-     <img src="https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png">
+   <div id="sky">
+     <img src="https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png ">
      <!--<img src="http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ">-->
-
+    <!--https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png-->
      </div>
+    
 </body>
 
 </html>
