--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <style>
-        <img src="">
+    
 
 
     </style>
@@ -17,7 +17,7 @@
    <div id="sky">
      <img src="https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png ">
      <!--<img src="http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ">-->
-    <!--https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png-->
+     <img id="red" src="red-41378_960_720.png">
      </div>
     
 </body>
