--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <style>
-    
-
 
     </style>
     <meta charset="UTF-8">
@@ -14,13 +12,12 @@
 </head>
 
 <body>
-   <div id="sky">
-     <img src="https://openclipart.org/image/800px/svg_to_png/159547/traffic-light-off.png ">
-     <!--<img src="http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ">-->
-     <img id="red" src="red-41378_960_720.png">
-     </div>
-    
+    <div id="sky">
+        <img id="red" src="red-41378_960_720.png">
+        <img id="yellow" src="Disc_Plain_yellow_dark.svg.png">
+        <img id="green" src="circle-23965_960_720.png">
+    </div>
+
 </body>
 
 </html>
-
