--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <p>Stop</p>
+    <p>Look</p>
+    <p>Listen</p>
     <div id="sky">
         <img id="red" src="red-41378_960_720.png">
         <img id="yellow" src="Disc_Plain_yellow_dark.svg.png">
