--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div id="sky">
-          <h1>WELCOME TO A WORLD OF SAFETY</h1>
+          <h1 id= "title">WELCOME TO A WORLD OF SAFETY</h1>
           <h2>Stop</h2>
           <h3>Look</h3>
           <h4>Listen</h4>
