--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </style>
     <meta charset="UTF-8">
-    <title>Light1</title>
+    <title>Light-Repo</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 
 </head>
@@ -14,11 +14,11 @@
 <body>
 
     <div id="sky">
-          <h1 id= "title">WELCOME TO A WORLD OF SAFETY</h1>
-          <h2>Stop</h2>
-          <h3>Look</h3>
-          <h4>Listen</h4>
-          
+        <h1 id="title">WELCOME TO A WORLD OF SAFETY</h1>
+        <h2>Stop</h2>
+        <h3>Look</h3>
+        <h4>Listen</h4>
+
         <img id="red" src="red-41378_960_720.png">
         <img id="yellow" src="Disc_Plain_yellow_dark.svg.png">
         <img id="green" src="circle-23965_960_720.png">
